# robotics_arm_project

./: Dockerfile  README.md  packages.txt
cr_bringup/: CMakeLists.txt  package.xml
cr_bringup/config/ur10/: controller.yaml  ompl_planning.yaml  ros2_control.yaml  ur10.srdf
cr_bringup/cr_bringup/: utils.py
cr_bringup/launch/: cr_robot_launch.py  demo_moveit_launch.py  moveit_gazebo_launch.py  moveit_launch.py  simple_control_launch.py
cr_description/: CMakeLists.txt  package.xml
cr_description/ros2_control/: ur10.ros2_control.xacro
cr_description/rviz/: default.rviz
cr_description/urdf/: ur10.urdf.xacro
cr_description/xacro/: ur10.xacro
cr_planning/: CMakeLists.txt  package.xml
cr_planning/config/: obstacle.yaml  planning.yaml
cr_planning/cr_planning/: moveit_demo_client.py  pcl_obstacle_moveit_client.py
cr_planning/include/cr_planning/: pcl_filter.hpp
cr_planning/launch/: moveit_demo_client_launch.py  pcl_obstacle_launch.py
cr_planning/src/: filter_main.cpp  pcl_filter.cpp
cr_simulation/: CMakeLists.txt  package.xml
cr_simulation/cr_simulation/: joint_state_adaptor.py
cr_simulation/launch/: sim_launch.py
cr_simulation/model/: ur10.sdf
cr_simulation/world/: depth_camera.sdf
