<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cr_bringup</name>
  <version>0.0.0</version>
  <description>Launchfile for CR robot arm</description>
  <maintainer email="wongyikben@gmail.com">Wong Yik Ben</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cr_description</depend>
  <depend>cr_planning</depend>
  <depend>cr_simulation</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>rviz_visual_tools</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>